--- a/Zad3/Zad3.csproj
+++ b/Zad3/Zad3.csproj
@@ -13,6 +13,7 @@
         <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
         <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+        <LangVersion>8</LangVersion>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
         <PlatformTarget>AnyCPU</PlatformTarget>
@@ -40,6 +41,15 @@
         <Reference Include="System.Xml"/>
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="Containers\Container.cs" />
+        <Compile Include="Containers\GasContainer.cs" />
+        <Compile Include="Containers\LiquidContainer.cs" />
+        <Compile Include="Containers\PossibleProducts.cs" />
+        <Compile Include="Containers\RefrigeratedContainer.cs" />
+        <Compile Include="Containers\Ship.cs" />
+        <Compile Include="Exceptions\OverfillException.cs" />
+        <Compile Include="Interfaces\IContainers.cs" />
+        <Compile Include="Interfaces\IHazardNotifier.cs" />
         <Compile Include="Program.cs"/>
         <Compile Include="Properties\AssemblyInfo.cs"/>
     </ItemGroup>
